Se mejoro la moduralizacion, se dio solucion a algunos errores y se añadieron algunas funciones logicas

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,13 @@
             "name": "Main",
             "request": "launch",
             "mainClass": "app.Main",
+            "projectName": "Barberia_154f545c"
+        },
+        {
+            "type": "java",
+            "name": "Main",
+            "request": "launch",
+            "mainClass": "app.Main",
             "projectName": "Barberia_92723be0"
         },
         {
