--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,13 @@
             "name": "InterfazGrafica",
             "request": "launch",
             "mainClass": "gui.InterfazGrafica",
+            "projectName": "Barberia_fa6e0da7"
+        },
+        {
+            "type": "java",
+            "name": "InterfazGrafica",
+            "request": "launch",
+            "mainClass": "gui.InterfazGrafica",
             "projectName": "Barberia_aaaf4d56"
         },
         {
